# vaquill-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/vaquill_mcp/: __init__.py  __main__.py  config.py  descriptions.py  remote.py  remote_main.py  server.py
tests/: conftest.py  test_config.py  test_server.py
