[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "vaquill-mcp"
dynamic = ["version"]
description = "MCP server for Vaquill legal research API - search 13M+ Indian court judgments via AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vaquill", email = "dev@vaquill.ai" },
]
keywords = ["mcp", "legal", "research", "vaquill", "ai", "rag", "law", "india"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vaquill-mcp = "vaquill_mcp.__main__:main"

[project.urls]
Homepage = "https://www.vaquill.ai"
Documentation = "https://www.vaquill.ai/docs/api-reference"
Repository = "https://github.com/vaquill/vaquill-mcp"
Issues = "https://github.com/vaquill/vaquill-mcp/issues"
Changelog = "https://github.com/vaquill/vaquill-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.version]
path = "src/vaquill_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vaquill_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
